# Forge

./: .gitignore  Makefile  Readme.md  build.sh  demo.c  forge
.github/workflows/: ci.yml  release.yml
core/: arena.c  arena.h  buffer.c  buffer.h  completion.c  completion.h  config.c  config.h  forge_api.h  forgescript.c  forgescript.h  git.c  git.h  globals.c  input.c  input.h  ipc.c  ipc.h  lsp.c  lsp.h  main.c  palette.c  palette.h  plugin.c  plugin.h  render.c  render.h  theme.c  theme.h  ui.c  ui.h  undo.c  undo.h
net/: Cargo.toml
net/src/: collab.rs  crdt.rs  crypto.rs  discovery.rs  guild.rs  ipc.rs  lib.rs  main.rs  peer.rs  transfer.rs
net/tests/: integration.rs
plugins/: autopairs.c  indent.c  statusbar.c
scripts/user/: example.fs
tests/: test_main.c
