[package]
name    = "forge-net"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
mdns-sd        = "0.11"
base64         = "0.22"
chacha20poly1305 = "0.10"
hkdf           = "0.12"
rand_core      = { version = "0.6", features = ["getrandom"] }
sha2           = "0.10"
x25519-dalek   = { version = "2", features = ["static_secrets"] }
